--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,22 @@
 language: node_js
 node_js:
-  - "16"  # Node.js sürümü (16 veya ihtiyacına göre başka versiyon)
+  - "16"
   
 services:
-  - postgresql  # Eğer PostgreSQL kullanıyorsan
-  - mysql       # Eğer MySQL kullanıyorsan
+  - postgresql
 
 before_install:
-  - npm install -g npm@latest  # Güncel npm yükle
+  - npm install -g npm@latest
 
 install:
-  - npm install  # Bağımlılıkları yükle
+  - npm install
 
 before_script:
-  - psql -c 'create database test_db;' -U postgres  # PostgreSQL için test veritabanı oluştur
-  - mysql -e 'CREATE DATABASE test_db;' -uroot  # MySQL için test veritabanı oluştur
+  - psql -c 'create database test_db;' -U postgres
+  - mysql -e 'CREATE DATABASE test_db;' -uroot
 
 script:
-  - npm test  # Testleri çalıştır
+  - npm test
 
 after_success:
-  - echo "✅ All tests passed successfully!"
+  - echo "All tests passed successfully!"
