--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "moment": "^2.30.1",
     "mongoose": "^8.7.1",
     "morgan": "~1.9.1",
+    "nodemon": "^3.1.9",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.3",
     "sequelize": "^6.37.5",
+    "sequelize-cli": "^6.6.2",
     "ua-parser-js": "^2.0.0"
   },
   "devDependencies": {
